src/main/webapp/resources/css/structure.css
/*--------- BODY --------- */
body {/*margin-top:50px;*/}
body .ui-widget {font-size: inherit;}
.ui-widget-content a {color: #428BCA;}
.ui-widget-content a:hover, .ui-widget-content a:focus {color: #2A6496;}

/* -------- TEMPLATE -------- */
.panelgridHeaderTable {width:100%;}
.panelgridHeaderTable .ui-widget-content, .panelgridHeaderTable .ui-widget-content > td {border:0; background:none;}
.panelgridHeaderTable .ui-widget-content > td:last-child table {margin-left:auto;}

.text-brand {color:#C55B28;}

#navbarFixed {margin-bottom:0;}
.navbar-fixed-top, .navbar-fixed-bottom {
    z-index: 930;
}
#navbarFixed .navbar-brand {color:#C55B28;}
#navbarFixed .icon-dataverse {color:#C55B28; font-size:28px; float: left; height: 50px; line-height: 28px; padding: 10px 0; margin-left:-15px;}
#navbarFixed .label.beta {display:block; float:left; margin-top:12px; background:#C55B28; font-size:18px; font-weight:normal;}

#navbarFixed form.navbar-form.navbar-form-link {margin:0; padding:0;}
#navbarFixed form.navbar-form-link a.ui-commandlink {display:block; padding:15px; color: #777;}
#navbarFixed form.navbar-form-link a.ui-commandlink:hover, #navbarFixed form.navbar-form-link a.ui-commandlink:focus {color: #262626; text-decoration: none;}
#navbarFixed #navbar-search-toggle, #navbarFixed #dataverseSupportLink, #navbarFixed #lnk_header_account_dropdown {cursor: pointer; cursor: hand;}
#navbarFixed .dropdown.accountName #lnk_header_account_dropdown span.glyphicon {margin-right:8px;}
#navbarFixed .dropdown.accountName .label.label-danger {margin-left:.5em; line-height:normal; vertical-align:text-top;}
#navbarFixed .dropdown.accountName .logout form {margin:0; padding:0; width:100%;}
#navbarFixed .dropdown.accountName .logout a {clear: both; color: #333333; display: block; font-weight: normal; line-height: 1.42857; padding: 3px 20px; white-space: nowrap; text-decoration: none;}
#navbarFixed .dropdown.accountName .logout a:hover, #navbarFixed .dropdown.accountName .logout a:focus {background-color: #E8E8E8; background-image: linear-gradient(to bottom, #F5F5F5 0px, #E8E8E8 100%); background-repeat: repeat-x; color: #262626; outline: 0; text-decoration: none;}

#footer {margin-top:3em; padding-bottom:4em;}
#footer .poweredbylogo span {color:#808080;font-size:.85em;margin-right:.3em;}
#footer .version {margin-top:24px;font-size:.85em;color:#808080;}

.panelLayoutBlock, .panelLayoutTitleBlock, .panelLayoutButtonBlock {border:0;}
.panelLayoutBlock .ui-panelgrid.panelgridLayoutTable .ui-widget-content, .panelLayoutBlock .ui-panelgrid.panelgridLayoutTable .ui-widget-content > td {border:0;}
.form-group table.noBorders tr.ui-widget-content, .form-group table.noBorders td {border:0; padding-left:0;}

.panelgridLayoutTable, .panelgridFormTable {width:100%;}
.panelgridFormTable > tbody > tr.ui-widget-content > td:first-child {width:20%;}
.panelgridFormTable.ui-panelgrid td table.ui-picklist td {border: 0; padding:0;}
.panelgridFormTable.ui-panelgrid td table.ui-picklist td ul.ui-widget-content.ui-corner-all {border:1px solid #DDDDDD; border-radius: 4px;}

.panelLayoutButtonBlock button {/*margin-right:2em;*/}

.panelLayoutBlock > .ui-widget-content {border-bottom:1px solid #DDDDDD;}
.panelLayoutBlock.breadcrumbNavBlock > .ui-widget-content {border-bottom:0;}
.panelLayoutTitleBlock > .ui-widget-content {border:0;}

.panelLayoutBlock .ui-panelgrid.panelgridLayoutTable .ui-widget-content .ui-panelgrid {margin-bottom: 1em;}
.panelLayoutBlock .ui-panelgrid.panelgridLayoutTable .ui-widget-content .ui-panelgrid .ui-widget-content .ui-panelgrid {margin-bottom: 0}
.panelLayoutBlock .ui-panelgrid.panelgridLayoutTable .ui-widget-content .ui-panelgrid .ui-widget-content .ui-panelgrid td:first-child {padding-left:0;}

.no-padding-left-right {padding-left:0;padding-right:0;}

.btn span.glyphicon {margin-right:.3em;}
.btn span.glyphicon.no-text {margin:0;}
.btn-group .btn span.glyphicon.no-text {margin-left:10px;margin-right:10px;}

.text-icon-inline {font-size:1.3em;line-height:1.1em;margin-right:4px;}

.messagePanel {/*padding-top:1em;*/}
.messagePanel .glyphicon {font-size: 1.5em; vertical-align: bottom;}

.highlightBold {font-weight:bold;}

#ajaxStatusPanel_start {width:31px;height:31px;position:fixed;right:50%;bottom:50%;z-index:1111;}
#ajaxStatusPanel_complete {position:absolute;top:-9999px;left:-9999px;}

.italic {font-style: italic;}
.margin-top {margin-top:1em;}
.no-margin-bottom {margin-bottom:0;}

table.selectManyCheckboxBlock input {margin-right:4px;}
table.selectManyCheckboxBlock label {font-weight:normal;}
label.normal-text {font-weight:normal;}
label.normal-text input {margin-right:4px;}

span.glyphicon[data-toggle='tooltip'] {cursor: default;}

/* Dropdown submenu */
.dropdown-submenu {
    position: relative;
}

.dropdown-submenu>.dropdown-menu {
    top: 0;
    left: 100%;
    margin-top: -6px;
    margin-left: -1px;
    -webkit-border-radius: 0 6px 6px 6px;
    -moz-border-radius: 0 6px 6px;
    border-radius: 0 6px 6px 6px;
}

.dropdown-submenu:hover>.dropdown-menu {
    display: block;
}

.dropdown-submenu>a:after {
    display: block;
    content: " ";
    float: right;
    width: 0;
    height: 0;
    border-color: transparent;
    border-style: solid;
    border-width: 5px 0 5px 5px;
    border-left-color: #ccc;
    margin-top: 5px;
    margin-right: -10px;
}

.dropdown-submenu:hover>a:after {
    border-left-color: #fff;
}

.dropdown-submenu.pull-left {
    float: none;
}

.dropdown-submenu.pull-left>.dropdown-menu {
    left: -100%;
    margin-left: 10px;
    -webkit-border-radius: 6px 0 6px 6px;
    -moz-border-radius: 6px 0 6px 6px;
    border-radius: 6px 0 6px 6px;
}

.highlight {
    padding: 9px 14px;
    margin-bottom: 1em;
    background-color: #f7f7f9;
    border: 1px solid #e1e1e8;
    border-radius: 4px;
}
.highlight pre {
    background-color: transparent;
    border: 0;
    margin-bottom: 0;
    margin-top: 0;
    padding: 0;
    white-space: nowrap;
    word-break: normal;
}
/* ... */

